fixed court blurring

--- a/client/src/pages/Drill/Drill.css
+++ b/client/src/pages/Drill/Drill.css
@@ -77,6 +77,7 @@
     width: 50%;
     height: 100%;
     padding: 0%;
+    z-index: 50;
 }
 
 /* Extra Stats Container */
